--- a/ddpcr/app/templates/app/assaypatient_detail.html
+++ b/ddpcr/app/templates/app/assaypatient_detail.html
@@ -7,5 +7,6 @@
   <p><strong>Date added:</strong> {{ assaypatient.date_added }}</p>
   <p><strong>Comment:</strong> {{ assaypatient.comment }}</p>
 
-  Add buttons for new, update and delete
+  <a href="{% url 'assayPatient-update' assaypatient.pk %}"><button type="button" class = "btn btn-default"><span class="badge bg-light text-dark">Update record</span></button></a>
+  <a href="{% url 'assayPatient-delete' assaypatient.pk %}"><button type="button" class = "btn btn-default"><span class="badge bg-danger text-light">Delete record</span></button></a>
 {% endblock %}
