--- a/ddpcr/app/templates/app/assaylot_list.html
+++ b/ddpcr/app/templates/app/assaylot_list.html
@@ -1,16 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 {% extends "app/base_generic.html" %}
+{% load bootstrap_icons %} <!-- Borde man inte kunna ladda det i base_generic, hur?? -->
+<!-- pip install django-bootstrap-icons -->
 {% block content %}
 <h1>Assay Lots<a href="{% url 'assayLot-create' %}"><button type="button" class = "btn btn-default"><span class="badge bg-light text-dark">New</span></button></a></h1>
 {% if assaylot_list %}
-<ul>
-  {% for lot in assaylot_list %}
-    <li>
-      <a href="{{ lot.get_absolute_url }}">{{ lot.lot }}</a> ({{ lot.assay }}, {{ lot.status }})
-    </li>
-  {% endfor %}
-</ul>
+<div class="table-responsive">
+  <table class="table table-striped table-hover">
+    <thead>
+      <tr>
+        <th>Lot</th>
+        <th>Assay</th>
+        <th>Freezer ID</th>
+        <th>Box Position</th>
+        <th>Status</th>
+        <th>Edit</th>
+        <th>Delete</th>
+      </tr>
+    </thead>
+    <tbody>
+    {% for lot in assaylot_list %}
+      <tr>
+       <td><a href="{{ lot.get_absolute_url }}">{{ lot.lot }}</a></td>
+       <td>{{lot.assay}}</td>
+       <td>{{lot.freezer_id}}</td>
+       <td>{{lot.box_position}}</td>
+       <td>{{lot.status}}</td>
+       <td><a href='{% url "assayLot-update" lot.pk %}'>
+         <button type="button" class="btn btn-light ">
+           {% bs_icon 'pencil-square' %}</button></a></td>
+       <td><a href='{% url "assayLot-delete" lot.pk %}'>
+         <button type="button" class="btn btn-light ">
+           {% bs_icon 'trash' %}</button></a></td>
+      </tr>
+    {% endfor %}
+    </tbody>
+  </table>
+</div>
 {% else %}
   <p>There are no assay lots in the database.</p>
 {% endif %}
