--- a/ddpcr/app/templates/app/assaypatient_list.html
+++ b/ddpcr/app/templates/app/assaypatient_list.html
@@ -1,16 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 {% extends "app/base_generic.html" %}
+{% load bootstrap_icons %} <!-- Borde man inte kunna ladda det i base_generic, hur?? -->
+<!-- pip install django-bootstrap-icons -->
 {% block content %}
 <h1>Assay Patients<a href="{% url 'assayPatient-create' %}"><button type="button" class = "btn btn-default"><span class="badge bg-light text-dark">New</span></button></a></h1>
 {% if assaypatient_list %}
-<ul>
-  {% for patient in assaypatient_list %}
-    <li>
-      <a href="{{ patient.get_absolute_url }}">{{ patient.study_id }}</a> ({{ patient.assay }}, {{ patient.date_added }})
-    </li>
-  {% endfor %}
-</ul>
+  <div class="table-responsive">
+    <table class="table table-striped table-hover">
+      <thead>
+        <tr>
+          <th>Study ID</th>
+          <th>Assay</th>
+          <th>Date Added</th>
+          <th>Edit</th>
+          <th>Delete</th>
+        </tr>
+      </thead>
+      <tbody>
+      {% for patient in assaypatient_list %}
+        <tr>
+         <td><a href="{{ patient.get_absolute_url }}">{{ patient.study_id }}</a></td>
+         <td>{{patient.assay}}</td>
+         <td>{{patient.date_added}}</td>
+         <td><a href='{% url "assayPatient-update" patient.pk %}'>
+           <button type="button" class="btn btn-light ">
+             {% bs_icon 'pencil-square' %}</button></a></td>
+         <td><a href='{% url "assayPatient-delete" patient.pk %}'>
+           <button type="button" class="btn btn-light ">
+             {% bs_icon 'trash' %}</button></a></td>
+        </tr>
+      {% endfor %}
+      </tbody>
+    </table>
+  </div>
 {% else %}
   <p>There are no patients in the database.</p>
 {% endif %}
