--- a/ddpcr/app/templates/app/assaylot_detail.html
+++ b/ddpcr/app/templates/app/assaylot_detail.html
@@ -5,15 +5,12 @@
 <h1>Assay lot number: {{ assaylot.lot }}</h1>
 
   <p><strong>Assay:</strong> <a href="{% url 'assayType-detail' assaylot.assay.pk %}"> {{ assaylot.assay }}</a></p>
-  <p><strong>Status:</strong> {{ assaylot.status }}</p>
-  <p><strong>Date Ordered:</strong> {{ assaylot.date_order }}</p>
-  <p><strong>Date Scanned:</strong> {{ assaylot.date_scanned }}</p>
-  <p><strong>Date Validated:</strong> {{ assaylot.date_validated }}</p>
+  <p>{{ assaylot.status }}</p>
   <p><strong>Test ID:</strong> {{ assaylot.test_id }}</p>
-  <p><strong>Date Activated:</strong> {{ assaylot.date_activated}}</p>
+  <p><strong>Fridge ID:</strong> {{ assaylot.fridge_id }}</p>
+  <p><strong>Box ID:</strong> {{ assaylot.box_id }}</p>
+  <p><strong>Box Position:</strong> {{ assaylot.box_position}}</p>
   <p><strong>Volume low:</strong> {{ assaylot.volume_low }}</p>
-  <p><strong>Date Inactivated:</strong> {{ assaylot.date_inactivated }}</p>
-  <p><strong>Freezer ID:</strong> {{ assaylot.freezer_id }} <strong>Box Position:</strong> {{ assaylot.box_position}}</p>
   <p><strong>Comment:</strong> {{ assaylot.comment }}</p>
 
 <a href="{% url 'assayLot-update' assaylot.pk %}"><button type="button" class = "btn btn-default"><span class="badge bg-light text-dark">Update record</span></button></a>
