Removed links to delete-page

--- a/ddpcr/app/templates/app/assaylot_list.html
+++ b/ddpcr/app/templates/app/assaylot_list.html
@@ -16,7 +16,7 @@
         <th>Box Position</th>
         <th>Status</th>
         <th>Edit</th>
-        <th>Delete</th>
+        <!-- <th>Delete</th> -->
       </tr>
     </thead>
     <tbody>
@@ -30,9 +30,9 @@
        <td><a href='{% url "assayLot-update" lot.pk %}'>
          <button type="button" class="btn btn-light ">
            {% bs_icon 'pencil-square' %}</button></a></td>
-       <td><a href='{% url "assayLot-delete" lot.pk %}'>
+       <!-- <td><a href='{% url "assayLot-delete" lot.pk %}'>
          <button type="button" class="btn btn-light ">
-           {% bs_icon 'trash' %}</button></a></td>
+           {% bs_icon 'trash' %}</button></a></td> -->
       </tr>
     {% endfor %}
     </tbody>
