Added test for update, and new buttons

--- a/ddpcr/app/templates/app/assaypatient_list.html
+++ b/ddpcr/app/templates/app/assaypatient_list.html
@@ -25,7 +25,7 @@
          <td>{{patient.date_added}}</td>
          <td><a href='{% url "assayPatient-update" patient.pk %}'>
            <button type="button" class="btn btn-light ">
-             {% bs_icon 'pencil-square' %}</button></a></td>
+             {% bs_icon "pencil-square" %}</button></a></td>
          <!-- <td><a href='{% url "assayPatient-delete" patient.pk %}'>
            <button type="button" class="btn btn-light ">
              {% bs_icon 'trash' %}</button></a></td> -->
