--- a/ddpcr/app/templates/app/assaylot_list.html
+++ b/ddpcr/app/templates/app/assaylot_list.html
@@ -29,7 +29,7 @@
        <td>{{lot.status}}</td>
        <td><a href='{% url "assayLot-update" lot.pk %}'>
          <button type="button" class="btn btn-light ">
-           {% bs_icon 'pencil-square' %}</button></a></td>
+           {% bs_icon "pencil-square" %}</button></a></td>
        <!-- <td><a href='{% url "assayLot-delete" lot.pk %}'>
          <button type="button" class="btn btn-light ">
            {% bs_icon 'trash' %}</button></a></td> -->
