--- a/ddpcr/app/templates/app/assaytype_list.html
+++ b/ddpcr/app/templates/app/assaytype_list.html
@@ -28,7 +28,7 @@
          <td>{{assay.status}}</td>
          <td><a href='{% url "assayType-update" assay.pk %}'>
            <button type="button" class="btn btn-light">
-             {% bs_icon 'pencil-square' %}</button></a></td>
+             {% bs_icon "pencil-square" %}</button></a></td>
          <!-- <td><a href='{% url "assayType-delete" assay.pk %}'>
            <button type="button" class="btn btn-light " >
              {% bs_icon 'trash' %}</button></a></td> -->
