--- a/ddpcr/app/templates/app/assaylot_detail.html
+++ b/ddpcr/app/templates/app/assaylot_detail.html
@@ -2,40 +2,23 @@
 <html lang="en">
 {% extends "app/base_generic.html" %}
 {% block content %}
-<div class="page-header">
-  <h1>Assay lot number: {{ assaylot.lot }}</h1>
+<div class="container">
+  <div class="page-header">
+    <h1>Assay lot ID: {{ assaylot.lot }}</h1>
+  </div>
+    <p class="{% if assaylot.status == 'Active' %}text-success{% elif assaylot.status == 'Inactive' %}text-danger{% else %}text-warning{% endif %}">{{ assaylot.status }}</p>
+    <p><strong>Assay:</strong> <a href="{% url 'assayType-detail' assaylot.assay.pk %}"> {{ assaylot.assay }}</a></p>
+    <p><strong>Test ID:</strong> {{ assaylot.test_id }}</p>
+    <p><strong>Fridge ID:</strong> {{ assaylot.fridge_id }}</p>
+    <p><strong>Box ID:</strong> {{ assaylot.box_id }}</p>
+    <p><strong>Box Position:</strong> {{ assaylot.box_position}}</p>
+    <p><strong>Volume low:</strong> {{ assaylot.volume_low }}</p>
+    <p class="text-muted"><strong>Comment:</strong> {{ assaylot.comment }}</p>
+
+    <!-- Borde vi inte ha sa att man kan se datumen at least? -->
+
+  <a href="{% url 'assayLot-update' assaylot.pk %}"><button type="button" class = "btn btn-default"><span class="badge bg-light text-dark">Update record</span></button></a>
+  <!-- <a href="{% url 'assayLot-delete' assaylot.pk %}"><button type="button" class = "btn btn-default"><span class="badge bg-danger text-light">Delete record</span></button></a> -->
 </div>
 
-  <p><strong>Assay:</strong> <a href="{% url 'assayType-detail' assaylot.assay.pk %}"> {{ assaylot.assay }}</a></p>
-  <p>{{ assaylot.status }}</p>
-  <p><strong>Test ID:</strong> {{ assaylot.test_id }}</p>
-  <p><strong>Fridge ID:</strong> {{ assaylot.fridge_id }}</p>
-  <p><strong>Box ID:</strong> {{ assaylot.box_id }}</p>
-  <p><strong>Box Position:</strong> {{ assaylot.box_position}}</p>
-  <p><strong>Volume low:</strong> {{ assaylot.volume_low }}</p>
-  <p><strong>Comment:</strong> {{ assaylot.comment }}</p>
-
-<a href="{% url 'assayLot-update' assaylot.pk %}"><button type="button" class = "btn btn-default"><span class="badge bg-light text-dark">Update record</span></button></a>
-<!-- <a href="{% url 'assayLot-delete' assaylot.pk %}"><button type="button" class = "btn btn-default"><span class="badge bg-danger text-light">Delete record</span></button></a> -->
-
-<!-- Add view of all patients using same assay after date activated? -->
-  <div style="margin-left:20px;margin-top:20px">
-    <h2>Study IDs</h2>
-    <hr>
-    How do we do a filter with same assay and assaylot.date_activated < patient.date_added > assaylot.date_inactivated?
-    Gar det ens?
-<!-- .filter(assaypatient.assay == assaylot.assay)&& (assaypatient.date_added > assaylot.date_activated && assaypatient.date_added < assaylot.date_inactivated )) %} -->
-    <!-- {% if assaytype.assaypatient_set.all %}
-      {% for patient in assaytype.assaypatient_set.all %}
-        <p><strong>Study ID: </strong>{{ patient.study_id }}</p>
-        <p><strong>Assay: </strong>{{ patient.assay }}</p>
-        <p><strong>Date Added: </strong>{{ patient.date_added }}</p>
-        <p class="text-muted"><strong>Comment: </strong>{{ patient.comment }}</p>
-        <hr>
-      {% endfor %}
-    {% else %}
-      <p> There are no patients associated with the activation time for the lot {{ assaylot.lot }}. </p>
-    {% endif %}
-     -->
-  </div>
 {% endblock %}
