--- a/ddpcr/app/templates/app/assaylot_form.html
+++ b/ddpcr/app/templates/app/assaylot_form.html
@@ -1,11 +1,27 @@
 {% extends "app/base_generic.html" %}
+{% load crispy_forms_tags %}
 
 {% block content %}
-  <form action="" method="post">
-    {% csrf_token %}
-    <table>
-    {{ form.as_table }}
-    </table>
-    <input type="submit" value="Submit">
-  </form>
+{% if object %}
+    <div class="page-header"><h1>Update Assay Lot</h1></div>
+{% else %}
+    <div class="page-header"><h1>New Assay Lot</h1></div>
+{% endif %}
+<div class="container">
+  <div class="row">
+    <div class="col-md-10">
+      <form action="" method="post">
+        {% csrf_token %}
+        <table>
+        {{ form|crispy }}
+        </table>
+        {% if object %}
+          <input type="submit" class="btn btn-success" value="Update Lot"/>
+        {% else %}
+          <input type="submit" class="btn btn-success" value="Add new Lot"/>
+        {% endif %}
+      </form>
+    </div>
+  </div>
+</div>
 {% endblock %}
