--- a/ddpcr/app/templates/app/assaytype_detail.html
+++ b/ddpcr/app/templates/app/assaytype_detail.html
@@ -19,7 +19,7 @@
   <p><strong>Enzymes:</strong> {{ assaytype.enzymes.all|join:", " }}</p>
   <p><strong>Temperature:</strong> {{ assaytype.temperature }}</p>
   <p><strong>Status:</strong> {{ assaytype.status }}</p>
-  <p><strong>Comment:</strong> {{ assaytype.comment }}</p>
+  <p class="text-muted"><strong>Comment:</strong> {{ assaytype.comment }}</p>
 
   <a href="{% url 'assayType-update' assaytype.pk %}"><button type="button" class = "btn btn-default"><span class="badge bg-light text-dark">Update record</span></button></a>
   <!-- <a href="{% url 'assayType-delete' assaytype.pk %}"><button type="button" class = "btn btn-default"><span class="badge bg-danger text-light">Delete record</span></button></a> -->
