--- a/ddpcr/app/templates/app/assaypatient_list.html
+++ b/ddpcr/app/templates/app/assaypatient_list.html
@@ -7,7 +7,7 @@
 <h1>Assay Patients<a href="{% url 'assayPatient-create' %}"><button type="button" class = "btn btn-default"><span class="badge bg-light text-dark">New</span></button></a></h1>
 {% if assaypatient_list %}
   <div class="table-responsive">
-    <table class="table table-striped table-hover">
+    <table id="table_id" class="table table-striped table-hover">
       <thead>
         <tr>
           <th>Study ID</th>
@@ -33,7 +33,17 @@
       {% endfor %}
       </tbody>
     </table>
-  </div>
+    {% block js %}
+      <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/jq-3.3.1/dt-1.10.25/b-1.7.1/date-1.1.0/datatables.min.css"/>
+
+      <script type="text/javascript" src="https://cdn.datatables.net/v/dt/jq-3.3.1/dt-1.10.25/b-1.7.1/date-1.1.0/datatables.min.js"></script>
+      <script>
+      $(document).ready( function () {
+          $('#table_id').DataTable();
+      } );
+      </script>
+      </div>
+    {% endblock %}
 {% else %}
   <p>There are no patients in the database.</p>
 {% endif %}
