--- a/ddpcr/app/templates/app/assaytype_list.html
+++ b/ddpcr/app/templates/app/assaytype_list.html
@@ -8,7 +8,7 @@
 
 {% if assaytype_list %}
   <div class="table-responsive">
-    <table class="table table-striped table-hover">
+    <table id="table_id" class="table table-striped table-hover">
       <thead>
         <tr>
           <th>Assay Name</th>
@@ -40,7 +40,17 @@
       {% endfor %}
       </tbody>
     </table>
-  </div>
+    {% block js %}
+      <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/jq-3.3.1/dt-1.10.25/b-1.7.1/date-1.1.0/datatables.min.css"/>
+
+      <script type="text/javascript" src="https://cdn.datatables.net/v/dt/jq-3.3.1/dt-1.10.25/b-1.7.1/date-1.1.0/datatables.min.js"></script>
+      <script>
+      $(document).ready( function () {
+          $('#table_id').DataTable();
+      } );
+      </script>
+      </div>
+    {% endblock %}
 {% else %}
   <p>There are no assays in the database.</p>
 {% endif %}
