--- a/ddpcr/app/templates/app/assaylot_list.html
+++ b/ddpcr/app/templates/app/assaylot_list.html
@@ -15,6 +15,7 @@
         <th>Fridge ID</th>
         <th>Box ID</th>
         <th>Box Position</th>
+        <th>Volume Low</th>
         <th>Status</th>
         <th>Edit</th>
         <!-- <th>Delete</th> -->
@@ -28,6 +29,7 @@
        <td>{{lot.fridge_id}}</td>
        <td>{{lot.box_id}}</td>
        <td>{{lot.box_position}}</td>
+       <td>{% if lot.volume_low %}<p class="text-danger">{% bs_icon "exclamation-triangle" %}</p>{% endif %}</td> <!-- How to make it narrower? -->
        <td>{{lot.status}}</td>
        <td><a href='{% url "assayLot-update" lot.pk %}'>
          <button type="button" class="btn btn-light ">
