--- a/ddpcr/app/templates/app/enzyme_form.html
+++ b/ddpcr/app/templates/app/enzyme_form.html
@@ -3,9 +3,9 @@
 
 {% block content %}
 {% if object %}
-    <div class="page-header"><h1>Update Assay Type</h1></div>
+    <div class="page-header"><h1>Update Enzyme</h1></div>
 {% else %}
-    <div class="page-header"><h1>New Assay Type</h1></div>
+    <div class="page-header"><h1>New Enzyme</h1></div>
 {% endif %}
 <div class="container">
   <div class="row">
@@ -17,9 +17,9 @@
         <!-- {{ form.as_table }} -->
         </table>
         {% if object %}
-          <input type="submit" class="btn btn-success" value="Update Assay Type"/>
+          <input type="submit" class="btn btn-success" value="Update Enzyme"/>
         {% else %}
-          <input type="submit" class="btn btn-success" value="Add new Assay"/>
+          <input type="submit" class="btn btn-success" value="Add Enzyme"/>
         {% endif %}
       </form>
     </div>
