Fix: Have content fill width of page

--- a/ddpcr/app/templates/app/base_generic.html
+++ b/ddpcr/app/templates/app/base_generic.html
@@ -40,7 +40,7 @@
           </div>
         </div>
       {% endblock %}
-      <div id="page-content-wrapper">
+      <div id="page-content-wrapper" class="container-fluid">
         <div class="container-fluid m-3">
           {% block content %}{% endblock %}
           {% block pagination %}
