--- a/ddpcr/app/templates/app/index.html
+++ b/ddpcr/app/templates/app/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 {% extends "app/base_generic.html" %}
 {% block content %}
+<div>
   <div class="row">
     <div class="col">
       <div class="card m-3">
@@ -24,4 +25,40 @@
       </div>
     </div>
   </div>
+    <div class="row">
+      <div class="col-sm">
+        <div class="table-responsive">
+          <table id="table_id" class="table table-striped table-hover">
+            <thead>
+              <tr>
+                <th colspan="2">Number of records in the database</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><a href="{% url 'assayType' %}">Assays</a></td>
+                <td>{{ num_assay }}</td>
+              </tr>
+              <tr>
+                <td><a href="{% url 'assayLot' %}">Lots</a></td>
+                <td>{{ num_lot }}</td>
+              </tr>
+              <tr>
+                <td><a href="{% url 'assayPatient' %}">Patients</a></td>
+                <td>{{ num_patient }}</td>
+              </tr>
+              <tr>
+                <td><a href="{% url 'enzyme' %}">Enzyme</a></td>
+                <td>{{ num_enzyme }}</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    <div class="col-md">
+      <h3>En bra överskrift</h3>
+       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sapien ex, posuere et pharetra eget, tempus et tortor. Donec facilisis tortor magna. Aliquam id eleifend ipsum. Integer a ipsum enim. Etiam tincidunt, odio gravida viverra bibendum, tellus velit ullamcorper massa, nec euismod eros lorem at est. Donec volutpat id nibh ut luctus. Ut ornare lorem sed magna rutrum, vel cursus sem semper. Curabitur sit amet sapien nec quam sollicitudin pulvinar. Proin sed magna nec eros interdum laoreet. Aliquam accumsan tempus ex, ac tempor arcu vulputate at. Suspendisse auctor ornare ligula, non egestas nunc pellentesque id.
+    </div>
+  </div>
+</div>
 {% endblock %}
