Feat: Remove most from landing page

--- a/ddpcr/app/templates/app/index.html
+++ b/ddpcr/app/templates/app/index.html
@@ -1,49 +1,27 @@
+<!DOCTYPE html>
 {% extends "app/base_generic.html" %}
 {% block content %}
-  <p>Welcome to Clinical Genomic Uppsala's ddPCR database!</br>
-    The database has the following number of records:</p>
-  <ul>
-    <li><strong>Patients:</strong> {{ num_patient }}</li>
-  </ul>
-  Lagga till plot over antal assay type, lot och patienter?
-
-  <div class="card m-3">
-    <div class="card-header">Currently {{ num_assay }} assays</div>
-    <div class="card-body">
-      <div class="container-fluid">
-        <div class="row align-items-center justify-content-between">
-          <div class="col-10">
-            <h4 class="card-title">Add assay</h4>
-            <p class="card-text">Add a new type of assay to the database</p>
-          </div>
-          <spacer />
-          <div class="col-2">
-            <a class="btn btn-primary text-white" href="{% url 'assayType-create' %}" role="button">
-              <i class="bi bi-plus-square"></i>
-            </a>
+  <div class="row">
+    <div class="col">
+      <div class="card m-3">
+        <div class="card-header">No info</div>
+        <div class="card-body">
+          <div class="container-fluid">
+            <div class="row align-items-center justify-content-between">
+              <div class="col-10">
+                <h4 class="card-title">This is an empty box</h4>
+                <p class="card-text">Ready to use</p>
+              </div>
+              <spacer />
+              <div class="col-2">
+                <a class="btn btn-primary text-white" href="#" role="button">
+                  <i class="bi bi-x"></i>
+                </a>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <div class="card m-3">
-    <div class="card-header">Currently (not implemented) LOTs</div>
-    <div class="card-body">
-      <div class="container-fluid">
-        <div class="row align-items-center justify-content-between">
-          <div class="col-10">
-            <h4 class="card-title">Order new LOT</h4>
-            <p class="card-text">Register new LOT order for an existing assay type</p>
-          </div>
-          <spacer />
-          <div class="col-2">
-            <a class="btn btn-primary text-white" href="{% url 'assayLot-order' %}" role="button">
-              <i class="bi bi-box"></i>
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!--p> You have visited this page {{ num_visits }} time{% if num_visits > 1 %}s{% endif %}.</p-->
 {% endblock %}
